Fix footer wrapping issue

--- a/_sass/_layout.sass
+++ b/_sass/_layout.sass
@@ -71,10 +71,14 @@ footer
   text-align: center
   position: absolute
   bottom: 1em
+  width: 100%
+  padding: 1em
 
   .chunk
     white-space: nowrap
     font-size: 1.25rem
+    display: inline-block
+    line-height: 2
 
     &::after
       content: '//'
